--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,42 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EasyWay</title>
+
+    <!-- region CSS -->
+    <link rel="stylesheet" href="{% static 'gate/bootstrap/css/bootstrap.min.css' %}">
     {% block styles %}
     {% endblock %}
+    <!-- endregion -->
 </head>
 <body>
+<header>
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top">
+        <a class="navbar-brand" href="{% url 'index' %}">EasyWay</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
 {% block body %}
 {% endblock %}
+<!-- region JS -->
+<script src="{% static 'gate/jquery/jquery-3.5.1.min.js' %}"></script>
+<script src="{% static 'gate/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 {% block scripts %}
 {% endblock %}
+<!-- endregion -->
 </body>
 </html>
