Frontend touch-ups

--- a/geo/static/geo/about.css
+++ b/geo/static/geo/about.css
@@ -1,8 +1,11 @@
 .about_header {
-    background: #28a544;
     color: #ffffff;
     border: #1c7430 solid 3px;
     border-radius: 10px;
     padding: 5px 10px;
+    margin-top: 20px;
+}
+
+.about_img {
     margin-top: 20px;
 }
