--- a/templates/geo/base.html
+++ b/templates/geo/base.html
@@ -21,12 +21,11 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top">
+    <nav class="navbar navbar-dark bg-success navbar-expand-md sticky-top">
         <a class="navbar-brand" href="{% url 'index' %}">
-            <img src="{% static 'generic/EasyWay.svg' %}"
-                 class="d-inline-block align-top" width="32" height="32"
-                 alt="" loading="lazy">
-            EasyWay</a>
+            <img src="{% static 'generic/EasyWay.svg' %}"class="d-inline-block align-top" width="32" height="32" alt="">
+            EasyWay
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
