--- a/templates/geo/about.html
+++ b/templates/geo/about.html
@@ -7,7 +7,7 @@
 
 {% block body %}
     <div class="container">
-        <img class="d-block mx-auto about_img" src="{% static 'generic/EasyWay.svg' %}" width=128 height=128 alt="EasyWay Logo">
+        <img class="d-block mx-auto about_img" src="{% static 'geo/images/EasyWay.svg' %}" width=128 height=128 alt="EasyWay Logo">
         <h2 class="about_header bg-success">SOBRE NÓS</h2>
         <p>O EasyWay surgiu através de um trabalho acadêmico, com o intuito de facilitar e auxiliar pessoas com
             mobilidade reduzida, indicando as melhores rotas, trajetos e avaliações para lugares
