--- a/templates/geo/base.html
+++ b/templates/geo/base.html
@@ -11,19 +11,19 @@
     <!-- region CSS -->
     <link rel="stylesheet" href="{% static 'geo/bootstrap/css/bootstrap.min.css' %}">
     <!-- Fallback Favicon -->
-    <link rel="icon" type="image/png" href="{% static 'generic/EasyWay_whitebg.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'geo/images/EasyWay_whitebg.png' %}">
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="{% static 'generic/EasyWay_whitebg.svg' %}">
+    <link rel="icon" type="image/svg+xml" href="{% static 'geo/images/EasyWay_whitebg.svg' %}">
 
     {% block styles %}
     {% endblock %}
     <!-- endregion -->
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <header>
     <nav class="navbar navbar-dark bg-success navbar-expand-md sticky-top">
         <a class="navbar-brand" href="{% url 'index' %}">
-            <img src="{% static 'generic/EasyWay.svg' %}"class="d-inline-block align-top" width="32" height="32" alt="">
+            <img src="{% static 'geo/images/EasyWay.svg' %}" class="d-inline-block align-top" width="32" height="32" alt="">
             EasyWay
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -51,7 +51,13 @@
 </header>
 {% block body %}
 {% endblock %}
+<footer class="footer mt-auto py-3 text-center">
+  <div class="container">
+    <span>&copy; {% now 'Y' %} EasyWay. Todos os direitos reservados.</span>
+  </div>
+</footer>
 <!-- region JS -->
+<script src="{% static 'getCookie.js' %}"></script>
 <script src="{% static 'geo/jquery/jquery-3.5.1.min.js' %}"></script>
 <script src="{% static 'geo/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 {% block scripts %}
