--- a/geo/static/geo/easyway.css
+++ b/geo/static/geo/easyway.css
@@ -1,4 +1,4 @@
-.about_header {
+.easyway_header {
     color: #ffffff;
     border: #1c7430 solid 3px;
     border-radius: 10px;
@@ -6,6 +6,6 @@
     margin-top: 20px;
 }
 
-.about_img {
+.easyway_logo {
     margin-top: 20px;
 }
